<resources>
    <string name="app_name">Recipe Ease</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="info_details">Please enter your account details below!</string>
    <string name="welcome">Welcome to Recipe App</string>
    <string name="accept_terms_condition"><![CDATA[Accept terms & Condition]]></string>
    <string name="create_account">Create Account</string>
    <string name="error_message"><![CDATA[Your password should be greater than 8 and have A-z letters, number and special characters like _ , &]]></string>
    <string name="error_message_email">you already have an account with this email</string>
    <string name="error_message_video_link">Error in play the Video </string>
    <string name="error_loading_data">Error Loading Data Check The Internet And Try Again  </string>
    <string name="retry">Retry </string>

    <string name="error_message_invalid_email">Invalid email</string>
    <string name="error_message_password_equality">password and confirm password doesn\'t match</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_successful">Sign up successful!</string>
    <string name="congrat_message">Your account has been created. Please wait a moment, we are preparing for you...</string>
    <string name="continue_button">Continue</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions"> Instruction</string>
    <string name="ingredients">Ingredients</string>
    <string name="cancel">Cancel</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="search">Search</string>
    <string name="there_is_no_meals_yet">There is no Meals yet</string>
    <string name="there_is_no_category_yet">There is no Category yet</string>
    <string name="recipe_details">Recipe details</string>
    <string name="welcome_message_about">Your kitchen companion Discover delicious recipes with what you have at hand, making cooking easier every day with Recipe Ease</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="SupportRecipeEase">SupportRecipeEase@gmail.com</string>
    <string name="there_are_no_favourites_yet">There are no Favourites Yet.</string>
</resources>