<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    tools:context=".ui.actitvity1.mainActitvity.signupSuccessful.CongratsFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/congrat"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_successful"
        android:textColor="@color/primaryColor"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"
        android:translationY="140dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congrat_message"
        android:textColor="@color/cardview_shadow_start_color"
        android:textSize="18sp"
        android:layout_marginHorizontal="16dp"
        android:translationY="200dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_continue"
        android:layout_marginTop="16dp"
        android:text="@string/continue_button"
        android:textSize="20sp"
        android:layout_marginHorizontal="16dp"
        android:translationY="270dp"
        />
</androidx.cardview.widget.CardView>